# slim-nimbus

./: Makefile.am  README.md  configure.ac  dark-index.theme.in  index.theme.in  light-index.theme.in
gtk-engine/: Makefile.am  nimbus_rc_style.c  nimbus_style.c
gtk-engine/gtk-2.0/: Makefile.am  dark-gtkrc  gtkrc  iconrc.in  light-gtkrc
gtk-engine/gtk-3.0/: Makefile.am  README  gtk-dark.css  gtk-light.css  gtk.css
gtk-engine/gtk-3.0/assets/: Makefile.am
gtk-engine/gtk-4.0/: Makefile.am  gtk-dark.css  gtk-light.css  gtk.css  settings.ini
gtk-engine/gtk-4.0/assets/: Makefile.am
gtk-engine/tests/: click.c  combo.c  combobox.c  handle.c  hscroll.c  menu.c  option-menu.c  panes.c  progress.c  radio-check.c  scales.c  scrollbar.c  spin-button.c  tab.c  textfield.c  twf.c
icons/: index.theme.in
metacity/: Makefile.am  dark-metacity-theme-1.xml  light-metacity-theme-1.xml  metacity-theme-1.xml
